--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.9.1",
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.0.27",
     "react": "^18.2.0",
